--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "build": "next build --no-lint",
-    "dev": "next dev --no-lint",
+    "dev": "next dev",
     "start": "next start",
     "lint": "next lint"
   },
